test/cases/compile_errors/undefined_function_call.zig
export fn a() void {
    b();
}

// error
// backend=stage2
// target=native
//
// :2:5: error: use of undeclared identifier 'b'
